--- a/mystyle.css
+++ b/mystyle.css
@@ -11,10 +11,18 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-.villaImage {
-  /* width: 500px; */
-}
-
 #navigation {
   margin-bottom: 100px;
+}
+
+#infobox {
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+}
+
+#infobox div {
+  flex-basis: 50%;
 }
